# tarot_counter

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  client.py  client_player.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00cfa1cfa120_add_players_ids_to_game_session_table.py  0e773508c4aa_correct_name_called_player_id.py  113b8b42e21d_rename_id_colums.py  20eb703cd010_split_miseres_and_poignees_into_.py  2ba265c85b46_add_game_table.py  3fafa4190e4f_create_types.py  4343a2a093e3_add_timetstamp_column.py  436345bd45c1_create_players_table.py  458a6a0a0585_add_scores_table.py  4cd167019e62_split_petit_au_bout_into_two_columns.py  4d63765e4e9d_create_questionnaires_table.py  4f9b379af14e_add_unique_contrain_on_player_table.py  53ef2dc9c207_add_players_talbe.py  619d474ddd2f_create_questionnaires_table.py  61adb3517ea4_create_questionnaires_table.py  958f7267c95a_remove_old_test_table.py  a2ea2bea1841_create_questionnaires_table.py  bb7a98aa93bc_use_player_ids_instead_of_names_in_.py  c1d98f748717_create_questionnaires_table.py  c337db3125b8_add_foreign_keys.py  cac83489bdd8_add_game_session_id_to_party_results.py  ec8194df2b9a_add_visible_column_to_players.py  f3da7b2fb786_create_questionnaires_table.py  f9e70025b631_create_party_results_table.py  fe4025266f3b_create_questionnaires_table.py
backend/app/: main.py
backend/app/api/: game_session.py  game_sessions.py  party_results.py  player.py  questionary.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/crud/: game_session.py  party_results.py  player.py  questionary.py
backend/app/models/: __init__.py  game_session.py  game_sessions.py  party_results.py  party_scores.py  player.py  questionary.py
backend/app/schemas/: game_session.py  party_results.py  player.py  player_score.py  questionary.py
backend/app/services/: scoring.py
backend/tests/services/: test_scoring.py
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/api/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: AddPlayerForm.css  AddPlayerForm.jsx  AddPlayerForm.tsx  HomeButton.css  HomeButton.tsx  HomePage.jsx  HomePage.tsx  NewPartyForm.css  NewPartyForm.jsx  NewPartyForm.tsx  PartyForm.css  PartyForm.jsx  PartyForm.tsx  TarotQuestionnaire.css  TarotQuestionnaire.jsx
frontend/src/pages/: HomePageWrapper.tsx  NewPartyFormWrapper.tsx  PartyFormWrapper.jsx  PartyFormWrapper.tsx  ResumeSessions.css  ResumeSessions.jsx  ResumeSessions.tsx  SessionDetails.css  SessionDetails.jsx  SessionDetails.tsx
frontend/src/services/: api.js  api.ts
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
