[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "french_tarot_counter"
version = "0.1.0"
description = "Backend of the french tarot counter full-stack application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.42",
]

[project.optional-dependencies]
dev-dependencies = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ipykernel",
]