[project]
name = "french_tarot_counter"
version = "0.1.0"
description = "Backend of the french tarot counter full-stack application"
readme = "README.md"
authors = [
    { name = "Victor Osso", email = "osso.victor@orange.fr" },
]
requires-python = ">=3.11"

dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ipykernel",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 79
indent-width = 4
include = ["**.py"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = ["COM812","D213","D203"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN", "D101", "D102", "D103", "ARG002"]

[tool.pytest.ini_options]
addopts = [
    "-s",
    "--cov=.",
    "--cov-fail-under=0",
]
pythonpath = ["."]
norecursedirs = ["tests/old_tests"]

[tool.coverage.run]
omit = [
    "tests/*",
    "__pycache__",
    "notebooks/*",
    "*__init__.py",
    "config.py",
    "config-3.py",
]
